--- a/src/main/resources/assets/moosestutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/moosestutorialmod/lang/en_us.json
@@ -2,5 +2,6 @@
   "item.moosestutorialmod.nominurite": "Nominurite Gem",
   "item.moosestutorialmod.raw_nominurite": "Raw Nominurite",
 
-  "block.moosestutorialmod.nominurite_block": "Block of Nominurite"
+  "block.moosestutorialmod.nominurite_block": "Block of Nominurite",
+  "block.moosestutorialmod.raw_nominurite_block": "Block of Raw Nominurite"
 }
