--- a/src/main/resources/assets/moosestutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/moosestutorialmod/lang/en_us.json
@@ -3,7 +3,7 @@
   "item.moosestutorialmod.raw_nominurite": "Raw Nominurite",
 
   "block.moosestutorialmod.nominurite_block": "Block of Nominurite",
-  "block.moosestutorialmod.raw_nominurite_block": "Block of Raw Nominurite",
+  "block.moosestutorialmod.nominurite_ore": "Numinurite Ore",
 
   "creativetab.moosestutorialmod.nominurite_items": "Nominurite Items",
   "creativetab.moosestutorialmod.nominurite_blocks": "Nominurite Blocks"
