--- a/src/main/resources/assets/moosestutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/moosestutorialmod/lang/en_us.json
@@ -4,6 +4,7 @@
 
   "block.moosestutorialmod.nominurite_block": "Block of Nominurite",
   "block.moosestutorialmod.nominurite_ore": "Numinurite Ore",
+  "block.moosestutorialmod.nominurite_deepslate_ore": "Deepslate Numinurite Ore",
 
   "creativetab.moosestutorialmod.nominurite_items": "Nominurite Items",
   "creativetab.moosestutorialmod.nominurite_blocks": "Nominurite Blocks"
